tests/fsharp/typecheck/sigs/neg_issue_3752.bsl

neg_issue_3752.fs(4,25,4,46): typecheck error FS0064: This construct causes code to be less generic than indicated by the type annotations. The type variable 'a has been constrained to be type 'string'.
